--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,17 +5,20 @@ android {
     buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "com.snatik.matches"
+        applicationId "com.beyonity.matchinggame"
         minSdkVersion 14
         targetSdkVersion 25
-        versionCode 1005
-        versionName "1.0.05"
+        versionCode 1
+        versionName "1.0"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    aaptOptions {
+        cruncherEnabled = false
     }
 }
 
