--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:11.2.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.adcolony:sdk:3.1.2'
+    compile 'com.google.ads.mediation:adcolony:3.1.2.0'
     testCompile 'junit:junit:4.12'
 }
