--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.beyonity.matchinggame" >
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="21" />
@@ -23,13 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.adcolony.sdk.AdColonyInterstitialActivity"
-                  android:configChanges="keyboardHidden|orientation|screenSize"
-                  android:hardwareAccelerated="true"/>
-
-        <activity android:name="com.adcolony.sdk.AdColonyAdViewActivity"
-                  android:configChanges="keyboardHidden|orientation|screenSize"
-                  android:hardwareAccelerated="true"/>
+        
     </application>
 
 </manifest>
