--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="efbb2cefaef4bf4f52ff3f2cea3d7e3aa4ee9ca0" />
     </application>
 
 </manifest>
