--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,12 @@
 buildscript {
     repositories {
         jcenter()
+
+                maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta2'
+        classpath 'io.fabric.tools:gradle:1.24.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +25,7 @@ allprojects {
         maven {
             url  "https://adcolony.bintray.com/AdColony"
         }
+        maven { url 'https://maven.fabric.io/public' }
 
     }
 }
